[package]
name = "fmttools"
version = "0.1.0"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
repository = "https://github.com/jmeggitt/fmttools"
description = "Non-allocating utilities for manipulating string data while formatting"
keywords = ["formatting", "iterator", "join", "replace"]
categories = ["algorithms", "rust-patterns"]


[dependencies]
