[package]
name = "fmttools"
version = "0.1.2"
edition = "2018"
license = "MIT OR Apache-2.0"
authors = ["Jasper Meggitt <jasper.meggitt@gmail.com>"]
repository = "https://github.com/jmeggitt/fmttools"
description = "Tools for modifying text without allocating any intermediate buffers or unsafe code"
keywords = ["formatting", "iterator", "join", "replace"]
categories = ["algorithms", "rust-patterns"]
readme = "README.md"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand_chacha = "0.3.1"
rand = "0.8.5"
itertools = "0.12.0"

[[bench]]
name = "join"
harness = false
